hphp/hack/test/typecheck/array_get_tconst.php.exp
File "array_get_tconst.php", line 4, characters 34-53:
Some type arguments violate their constraints (Typing[4323])
  File "hackarray.hhi", line 29, characters 49-50:
  `Tk` is a constrained type parameter
  File "hackarray.hhi", line 29, characters 55-62:
  This type constraint is violated
  File "hackarray.hhi", line 29, characters 55-62:
  Expected `arraykey`
  File "array_get_tconst.php", line 4, characters 41-45:
  But got `mixed`
File "array_get_tconst.php", line 8, characters 12-13:
Invalid return type (Typing[4110])
  File "array_get_tconst.php", line 6, characters 43-55:
  Expected `this::MyArray`
  File "array_get_tconst.php", line 4, characters 34-53:
  But got `dict<mixed, mixed>`
